Parser.fsyacc.output
Output file describing compiled parser placed in C:\Users\mire\Documents\MRH data\Kurser\02257-16\GuardedCommandsVersion2\GuardedCommands\GuardedCommands\Parser.fs and C:\Users\mire\Documents\MRH data\Kurser\02257-16\GuardedCommandsVersion2\GuardedCommands\GuardedCommands\Parser.fsi
------------------------
states =
state 0:
  items:
    _startMain ->  . Main

  actions:
    action 'HIGH' (noprec):   error
    action 'EOF' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'ASG' (noprec):   error
    action 'SKIP' (noprec):   error
    action 'ABORT' (noprec):   error
    action 'NEG' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'AND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'LE' (noprec):   error
    action 'LT' (noprec):   error
    action 'GT' (noprec):   error
    action 'NEQ' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'BAR' (noprec):   error
    action 'TO' (noprec):   error
    action 'IF' (noprec):   error
    action 'FI' (noprec):   error
    action 'DO' (noprec):   error
    action 'OD' (noprec):   error
    action 'BEGIN' (noprec):   shift 6
    action 'END' (noprec):   error
    action 'LP' (noprec):   error
    action 'LCP' (noprec):   error
    action 'LSP' (noprec):   error
    action 'RP' (noprec):   error
    action 'RCP' (noprec):   error
    action 'RSP' (noprec):   error
    action 'ITYP' (noprec):   error
    action 'BTYP' (noprec):   error
    action 'NAME' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Main: 1
    goto Prog: 4

state 1:
  items:
    _startMain -> Main .

  actions:
    action 'HIGH' (noprec):   accept
    action 'EOF' (noprec):   accept
    action 'PRINT' (noprec):   accept
    action 'ASG' (noprec):   accept
    action 'SKIP' (noprec):   accept
    action 'ABORT' (noprec):   accept
    action 'NEG' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'AND' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'NEQ' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'SEMI' (noprec):   accept
    action 'BAR' (noprec):   accept
    action 'TO' (noprec):   accept
    action 'IF' (noprec):   accept
    action 'FI' (noprec):   accept
    action 'DO' (noprec):   accept
    action 'OD' (noprec):   accept
    action 'BEGIN' (noprec):   accept
    action 'END' (noprec):   accept
    action 'LP' (noprec):   accept
    action 'LCP' (noprec):   accept
    action 'LSP' (noprec):   accept
    action 'RP' (noprec):   accept
    action 'RCP' (noprec):   accept
    action 'RSP' (noprec):   accept
    action 'ITYP' (noprec):   accept
    action 'BTYP' (noprec):   accept
    action 'NAME' (noprec):   accept
    action 'STRING' (noprec):   accept
    action 'BOOL' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    _startProg ->  . Prog

  actions:
    action 'HIGH' (noprec):   error
    action 'EOF' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'ASG' (noprec):   error
    action 'SKIP' (noprec):   error
    action 'ABORT' (noprec):   error
    action 'NEG' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'AND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'LE' (noprec):   error
    action 'LT' (noprec):   error
    action 'GT' (noprec):   error
    action 'NEQ' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'BAR' (noprec):   error
    action 'TO' (noprec):   error
    action 'IF' (noprec):   error
    action 'FI' (noprec):   error
    action 'DO' (noprec):   error
    action 'OD' (noprec):   error
    action 'BEGIN' (noprec):   shift 6
    action 'END' (noprec):   error
    action 'LP' (noprec):   error
    action 'LCP' (noprec):   error
    action 'LSP' (noprec):   error
    action 'RP' (noprec):   error
    action 'RCP' (noprec):   error
    action 'RSP' (noprec):   error
    action 'ITYP' (noprec):   error
    action 'BTYP' (noprec):   error
    action 'NAME' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto Prog: 3

state 3:
  items:
    _startProg -> Prog .

  actions:
    action 'HIGH' (noprec):   accept
    action 'EOF' (noprec):   accept
    action 'PRINT' (noprec):   accept
    action 'ASG' (noprec):   accept
    action 'SKIP' (noprec):   accept
    action 'ABORT' (noprec):   accept
    action 'NEG' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'AND' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'NEQ' (noprec):   accept
    action 'COMMA' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'SEMI' (noprec):   accept
    action 'BAR' (noprec):   accept
    action 'TO' (noprec):   accept
    action 'IF' (noprec):   accept
    action 'FI' (noprec):   accept
    action 'DO' (noprec):   accept
    action 'OD' (noprec):   accept
    action 'BEGIN' (noprec):   accept
    action 'END' (noprec):   accept
    action 'LP' (noprec):   accept
    action 'LCP' (noprec):   accept
    action 'LSP' (noprec):   accept
    action 'RP' (noprec):   accept
    action 'RCP' (noprec):   accept
    action 'RSP' (noprec):   accept
    action 'ITYP' (noprec):   accept
    action 'BTYP' (noprec):   accept
    action 'NAME' (noprec):   accept
    action 'STRING' (noprec):   accept
    action 'BOOL' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 4:
  items:
    Main -> Prog . 'EOF'

  actions:
    action 'HIGH' (noprec):   error
    action 'EOF' (noprec):   shift 5
    action 'PRINT' (noprec):   error
    action 'ASG' (noprec):   error
    action 'SKIP' (noprec):   error
    action 'ABORT' (noprec):   error
    action 'NEG' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'AND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'LE' (noprec):   error
    action 'LT' (noprec):   error
    action 'GT' (noprec):   error
    action 'NEQ' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'BAR' (noprec):   error
    action 'TO' (noprec):   error
    action 'IF' (noprec):   error
    action 'FI' (noprec):   error
    action 'DO' (noprec):   error
    action 'OD' (noprec):   error
    action 'BEGIN' (noprec):   error
    action 'END' (noprec):   error
    action 'LP' (noprec):   error
    action 'LCP' (noprec):   error
    action 'LSP' (noprec):   error
    action 'RP' (noprec):   error
    action 'RCP' (noprec):   error
    action 'RSP' (noprec):   error
    action 'ITYP' (noprec):   error
    action 'BTYP' (noprec):   error
    action 'NAME' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 5:
  items:
    Main -> Prog 'EOF' .

  actions:
    action 'HIGH' (noprec):   reduce Main --> Prog 'EOF'
    action 'EOF' (noprec):   reduce Main --> Prog 'EOF'
    action 'PRINT' (noprec):   reduce Main --> Prog 'EOF'
    action 'ASG' (noprec):   reduce Main --> Prog 'EOF'
    action 'SKIP' (noprec):   reduce Main --> Prog 'EOF'
    action 'ABORT' (noprec):   reduce Main --> Prog 'EOF'
    action 'NEG' (noprec):   reduce Main --> Prog 'EOF'
    action 'PLUS' (noprec):   reduce Main --> Prog 'EOF'
    action 'MINUS' (noprec):   reduce Main --> Prog 'EOF'
    action 'TIMES' (noprec):   reduce Main --> Prog 'EOF'
    action 'AND' (noprec):   reduce Main --> Prog 'EOF'
    action 'EQ' (noprec):   reduce Main --> Prog 'EOF'
    action 'LE' (noprec):   reduce Main --> Prog 'EOF'
    action 'LT' (noprec):   reduce Main --> Prog 'EOF'
    action 'GT' (noprec):   reduce Main --> Prog 'EOF'
    action 'NEQ' (noprec):   reduce Main --> Prog 'EOF'
    action 'COMMA' (noprec):   reduce Main --> Prog 'EOF'
    action 'COLON' (noprec):   reduce Main --> Prog 'EOF'
    action 'SEMI' (noprec):   reduce Main --> Prog 'EOF'
    action 'BAR' (noprec):   reduce Main --> Prog 'EOF'
    action 'TO' (noprec):   reduce Main --> Prog 'EOF'
    action 'IF' (noprec):   reduce Main --> Prog 'EOF'
    action 'FI' (noprec):   reduce Main --> Prog 'EOF'
    action 'DO' (noprec):   reduce Main --> Prog 'EOF'
    action 'OD' (noprec):   reduce Main --> Prog 'EOF'
    action 'BEGIN' (noprec):   reduce Main --> Prog 'EOF'
    action 'END' (noprec):   reduce Main --> Prog 'EOF'
    action 'LP' (noprec):   reduce Main --> Prog 'EOF'
    action 'LCP' (noprec):   reduce Main --> Prog 'EOF'
    action 'LSP' (noprec):   reduce Main --> Prog 'EOF'
    action 'RP' (noprec):   reduce Main --> Prog 'EOF'
    action 'RCP' (noprec):   reduce Main --> Prog 'EOF'
    action 'RSP' (noprec):   reduce Main --> Prog 'EOF'
    action 'ITYP' (noprec):   reduce Main --> Prog 'EOF'
    action 'BTYP' (noprec):   reduce Main --> Prog 'EOF'
    action 'NAME' (noprec):   reduce Main --> Prog 'EOF'
    action 'STRING' (noprec):   reduce Main --> Prog 'EOF'
    action 'BOOL' (noprec):   reduce Main --> Prog 'EOF'
    action 'INT' (noprec):   reduce Main --> Prog 'EOF'
    action 'error' (noprec):   reduce Main --> Prog 'EOF'
    action '#' (noprec):   reduce Main --> Prog 'EOF'
    action '$$' (noprec):   reduce Main --> Prog 'EOF'

  immediate action:   reduce Main --> Prog 'EOF'
 gotos:

state 6:
  items:
    Prog -> 'BEGIN' . DecList 'SEMI' StmL 'END'
    Prog -> 'BEGIN' . StmL 'END'

  actions:
    action 'HIGH' (noprec):   reduce StmL -->
    action 'EOF' (noprec):   reduce StmL -->
    action 'PRINT' (noprec):   shift 24
    action 'ASG' (noprec):   reduce StmL -->
    action 'SKIP' (noprec):   shift 29
    action 'ABORT' (noprec):   shift 30
    action 'NEG' (noprec):   reduce StmL -->
    action 'PLUS' (noprec):   reduce StmL -->
    action 'MINUS' (noprec):   reduce StmL -->
    action 'TIMES' (noprec):   reduce StmL -->
    action 'AND' (noprec):   reduce StmL -->
    action 'EQ' (noprec):   reduce StmL -->
    action 'LE' (noprec):   reduce StmL -->
    action 'LT' (noprec):   reduce StmL -->
    action 'GT' (noprec):   reduce StmL -->
    action 'NEQ' (noprec):   reduce StmL -->
    action 'COMMA' (noprec):   reduce StmL -->
    action 'COLON' (noprec):   reduce StmL -->
    action 'SEMI' (noprec):   reduce StmL -->
    action 'BAR' (noprec):   reduce StmL -->
    action 'TO' (noprec):   reduce StmL -->
    action 'IF' (noprec):   shift 34
    action 'FI' (noprec):   reduce StmL -->
    action 'DO' (noprec):   shift 37
    action 'OD' (noprec):   reduce StmL -->
    action 'BEGIN' (noprec):   reduce StmL -->
    action 'END' (noprec):   reduce StmL -->
    action 'LP' (noprec):   reduce StmL -->
    action 'LCP' (noprec):   shift 31
    action 'LSP' (noprec):   reduce StmL -->
    action 'RP' (noprec):   reduce StmL -->
    action 'RCP' (noprec):   reduce StmL -->
    action 'RSP' (noprec):   reduce StmL -->
    action 'ITYP' (noprec):   reduce StmL -->
    action 'BTYP' (noprec):   reduce StmL -->
    action 'NAME' (noprec):   shift 17
    action 'STRING' (noprec):   reduce StmL -->
    action 'BOOL' (noprec):   reduce StmL -->
    action 'INT' (noprec):   reduce StmL -->
    action 'error' (noprec):   reduce StmL -->
    action '#' (noprec):   reduce StmL -->
    action '$$' (noprec):   reduce StmL -->

  immediate action: <none>
 gotos:
    goto Dec: 20
    goto DecList: 7
    goto Access: 26
    goto Stm: 41
    goto StmL: 11
    goto StmList: 40

state 7:
  items:
    Prog -> 'BEGIN' DecList . 'SEMI' StmL 'END'

  actions:
    action 'HIGH' (noprec):   error
    action 'EOF' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'ASG' (noprec):   error
    action 'SKIP' (noprec):   error
    action 'ABORT' (noprec):   error
    action 'NEG' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'AND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'LE' (noprec):   error
    action 'LT' (noprec):   error
    action 'GT' (noprec):   error
    action 'NEQ' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMI' (noprec):   shift 8
    action 'BAR' (noprec):   error
    action 'TO' (noprec):   error
    action 'IF' (noprec):   error
    action 'FI' (noprec):   error
    action 'DO' (noprec):   error
    action 'OD' (noprec):   error
    action 'BEGIN' (noprec):   error
    action 'END' (noprec):   error
    action 'LP' (noprec):   error
    action 'LCP' (noprec):   error
    action 'LSP' (noprec):   error
    action 'RP' (noprec):   error
    action 'RCP' (noprec):   error
    action 'RSP' (noprec):   error
    action 'ITYP' (noprec):   error
    action 'BTYP' (noprec):   error
    action 'NAME' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 8:
  items:
    Prog -> 'BEGIN' DecList 'SEMI' . StmL 'END'

  actions:
    action 'HIGH' (noprec):   reduce StmL -->
    action 'EOF' (noprec):   reduce StmL -->
    action 'PRINT' (noprec):   shift 24
    action 'ASG' (noprec):   reduce StmL -->
    action 'SKIP' (noprec):   shift 29
    action 'ABORT' (noprec):   shift 30
    action 'NEG' (noprec):   reduce StmL -->
    action 'PLUS' (noprec):   reduce StmL -->
    action 'MINUS' (noprec):   reduce StmL -->
    action 'TIMES' (noprec):   reduce StmL -->
    action 'AND' (noprec):   reduce StmL -->
    action 'EQ' (noprec):   reduce StmL -->
    action 'LE' (noprec):   reduce StmL -->
    action 'LT' (noprec):   reduce StmL -->
    action 'GT' (noprec):   reduce StmL -->
    action 'NEQ' (noprec):   reduce StmL -->
    action 'COMMA' (noprec):   reduce StmL -->
    action 'COLON' (noprec):   reduce StmL -->
    action 'SEMI' (noprec):   reduce StmL -->
    action 'BAR' (noprec):   reduce StmL -->
    action 'TO' (noprec):   reduce StmL -->
    action 'IF' (noprec):   shift 34
    action 'FI' (noprec):   reduce StmL -->
    action 'DO' (noprec):   shift 37
    action 'OD' (noprec):   reduce StmL -->
    action 'BEGIN' (noprec):   reduce StmL -->
    action 'END' (noprec):   reduce StmL -->
    action 'LP' (noprec):   reduce StmL -->
    action 'LCP' (noprec):   shift 31
    action 'LSP' (noprec):   reduce StmL -->
    action 'RP' (noprec):   reduce StmL -->
    action 'RCP' (noprec):   reduce StmL -->
    action 'RSP' (noprec):   reduce StmL -->
    action 'ITYP' (noprec):   reduce StmL -->
    action 'BTYP' (noprec):   reduce StmL -->
    action 'NAME' (noprec):   shift 23
    action 'STRING' (noprec):   reduce StmL -->
    action 'BOOL' (noprec):   reduce StmL -->
    action 'INT' (noprec):   reduce StmL -->
    action 'error' (noprec):   reduce StmL -->
    action '#' (noprec):   reduce StmL -->
    action '$$' (noprec):   reduce StmL -->

  immediate action: <none>
 gotos:
    goto Access: 26
    goto Stm: 41
    goto StmL: 9
    goto StmList: 40

state 9:
  items:
    Prog -> 'BEGIN' DecList 'SEMI' StmL . 'END'

  actions:
    action 'HIGH' (noprec):   error
    action 'EOF' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'ASG' (noprec):   error
    action 'SKIP' (noprec):   error
    action 'ABORT' (noprec):   error
    action 'NEG' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'AND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'LE' (noprec):   error
    action 'LT' (noprec):   error
    action 'GT' (noprec):   error
    action 'NEQ' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'BAR' (noprec):   error
    action 'TO' (noprec):   error
    action 'IF' (noprec):   error
    action 'FI' (noprec):   error
    action 'DO' (noprec):   error
    action 'OD' (noprec):   error
    action 'BEGIN' (noprec):   error
    action 'END' (noprec):   shift 10
    action 'LP' (noprec):   error
    action 'LCP' (noprec):   error
    action 'LSP' (noprec):   error
    action 'RP' (noprec):   error
    action 'RCP' (noprec):   error
    action 'RSP' (noprec):   error
    action 'ITYP' (noprec):   error
    action 'BTYP' (noprec):   error
    action 'NAME' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 10:
  items:
    Prog -> 'BEGIN' DecList 'SEMI' StmL 'END' .

  actions:
    action 'HIGH' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'EOF' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'PRINT' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'ASG' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'SKIP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'ABORT' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'NEG' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'PLUS' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'MINUS' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'TIMES' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'AND' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'EQ' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'LE' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'LT' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'GT' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'NEQ' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'COMMA' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'COLON' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'SEMI' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'BAR' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'TO' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'IF' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'FI' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'DO' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'OD' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'BEGIN' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'END' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'LP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'LCP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'LSP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'RP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'RCP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'RSP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'ITYP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'BTYP' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'NAME' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'STRING' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'BOOL' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'INT' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action 'error' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action '#' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
    action '$$' (noprec):   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'

  immediate action:   reduce Prog --> 'BEGIN' DecList 'SEMI' StmL 'END'
 gotos:

state 11:
  items:
    Prog -> 'BEGIN' StmL . 'END'

  actions:
    action 'HIGH' (noprec):   error
    action 'EOF' (noprec):   error
    action 'PRINT' (noprec):   error
    action 'ASG' (noprec):   error
    action 'SKIP' (noprec):   error
    action 'ABORT' (noprec):   error
    action 'NEG' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'AND' (noprec):   error
    action 'EQ' (noprec):   error
    action 'LE' (noprec):   error
    action 'LT' (noprec):   error
    action 'GT' (noprec):   error
    action 'NEQ' (noprec):   error
    action 'COMMA' (noprec):   error
    action 'COLON' (noprec):   error
    action 'SEMI' (noprec):   error
    action 'BAR' (noprec):   error
    action 'TO' (noprec):   error
    action 'IF' (noprec):   error
    action 'FI' (noprec):   error
    action 'DO' (noprec):   error
    action 'OD' (noprec):   error
    action 'BEGIN' (noprec):   error
    action 'END' (noprec):   shift 12
    action 'LP' (noprec):   error
    action 'LCP' (noprec):   error
    action 'LSP' (noprec):   error
    action 'RP' (noprec):   error
    action 'RCP' (noprec):   error
    action 'RSP' (noprec):   error
    action 'ITYP' (noprec):   error
    action 'BTYP' (noprec):   error
    action 'NAME' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'INT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 12:
  items:
    Prog -> 'BEGIN' StmL 'END' .

  actions:
    action 'HIGH' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'EOF' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'PRINT' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'ASG' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'SKIP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'ABORT' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'NEG' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'PLUS' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'MINUS' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'TIMES' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'AND' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'EQ' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'LE' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'LT' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'GT' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'NEQ' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'COMMA' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'COLON' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'SEMI' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'BAR' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'TO' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'IF' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'FI' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'DO' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'OD' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'BEGIN' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'END' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'LP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'LCP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'LSP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'RP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'RCP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'RSP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'ITYP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'BTYP' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'NAME' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'STRING' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'BOOL' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'INT' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action 'error' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action '#' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'
    action '$$' (noprec):   reduce Prog --> 'BEGIN' StmL 'END'

  immediate action:   reduce Prog --> 'BEGIN' StmL 'END'
 gotos:

state 13:
  items:
    BasicTyp -> 'BTYP' .
